--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
-# Add your OpenAI API keys here
+# Add your OpenAI API keys and password here
 API_KEY=your_openai_api_key_here
 SECOND_API_KEY=your_second_openai_api_key_here
+PASSWORD=your_password_here
